Wed Jun 11 17:28:55 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:

          Fixed warning.

Wed Jun 11 16:47:26 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.cpp:

          Fixed compile error for SunOS.

Tue Jun 10 15:15:16 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/PersistentInfoRepo.mpc:

          Missed fixing subscriber project.

Tue Jun 10 12:50:11 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/PersistentInfoRepo.mpc:

          Changed path to TestUtils to be relative to this directory to
          fix the install builds.

        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Fixed build warning.

Mon Jun  9 19:52:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DataReaderListenerImpl.h:

          Fixed missed include.

        * tests/Utils/DDSApp.cpp:

          Using argv directly.

Mon Jun  9 16:21:12 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Listener.h:
        * tests/Utils/DDSApp.h:
        * tests/Utils/DataReaderListenerImpl.h:
        * tests/Utils/ListenerRecorder.h:

          Fixed errors on linux builds.

Fri Jun  6 20:56:37 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:
        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Method change from DDSApp.

        * tests/Utils/DDSApp.h:
        * tests/Utils/DDSFacade.h:

          Added documentation.

Fri Jun  6 19:55:16 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo:
        * tests/DCPS/PersistentInfoRepo/Listener.h:
        * tests/DCPS/PersistentInfoRepo/Listener.cpp:
        * tests/DCPS/PersistentInfoRepo/PersistentInfoRepo.mpc:
        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:
        * tests/DCPS/PersistentInfoRepo/README: